--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -14,6 +14,7 @@
 @import './components/noticias';
 @import './components/hogar';
 @import './components/empresas';
+@import './components/contacto';
 
 
 
