--- a/src/Styles/components/_contacto.scss
+++ b/src/Styles/components/_contacto.scss
@@ -20,7 +20,7 @@
         height: 35px;
         background: $naranja;
         color: $blanco;
-        margin: auto;
+        margin: 35px 0px;
         border: none;
     border-radius: 20px ;    }
     
