--- a/src/Styles/components/_header.scss
+++ b/src/Styles/components/_header.scss
@@ -86,9 +86,13 @@ nav{
 
 @media screen and (max-width: 468px) {
 
-
+nav{
+   width: 100%;
+    position: absolute;
+}
     .menu{
       display: block;
+      margin-top: 10px;
     }
     .nav_item {
         width: 100%;
@@ -97,22 +101,21 @@ nav{
         display: flex;
         flex-direction: column;
         height: 100vh;
-        left: 99%;
+        left: 0;
+        transform: translateX(-100%);
         transition: all 1s ease; 
         opacity: .98;
-        border-radius: 20px 0px 0px 20px;
-        -webkit-box-shadow: -20px -2px 41px -25px rgba(0,0,0,0.43);
-        -moz-box-shadow: -20px -2px 41px -25px rgba(0,0,0,0.43);
-        box-shadow: -20px -2px 41px -25px rgba(0,0,0,0.43);
+      
+       
       li{
-        text-align: center;
+        text-align: end;
         padding: 20px;
       }
       a {
         padding: 5px 30px;
         color: #e9e9e9;
         text-decoration: none; 
-        text-align: end;
+        
       }
      }
 
@@ -132,12 +135,11 @@ nav{
         } 
 
         .close span:nth-child(3){
-            transform: rotate(-45deg) translate(-5px, 1px);
+            transform: rotate(-45deg) translate(-3px, 1px);
         }
 
-        .open{
-            left: 0;
-            transform: translateX(-100%) !important;
+    .open{
+         transform: translateX(0%) !important;
         }
 
 
