--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -15,6 +15,8 @@
 @import './components/hogar';
 @import './components/empresas';
 @import './components/contacto';
+@import './components/modal';
+
 
 
 
