--- a/src/Styles/components/_modal.scss
+++ b/src/Styles/components/_modal.scss
@@ -14,10 +14,11 @@
             flex-direction: column;
                 max-width: 800px;
                 min-width: 320px;
-                padding: 50px 30px ;
+                padding: 0px 10px 10px 10px ;
             
                 }
                 h2{
+                    margin-top: 50px;
                     font-size: 2rem;
                     text-align: center;
                     margin-bottom: 50px ;
@@ -32,7 +33,9 @@
                     height: 35px;
                     background: $naranja;
                     color: $blanco;
-                    margin: 35px 0px;
+                    margin: 0;
+                    padding: 0;
+                    margin: 20px auto;
                     border: none;
                     border-radius: 20px ;
                         &:hover{
@@ -68,7 +71,7 @@
         
         .enviar{
             
-            margin: 35px auto;
+          
         }
 
     
