--- a/src/Styles/components/_hogar.scss
+++ b/src/Styles/components/_hogar.scss
@@ -41,24 +41,57 @@
            
         }
         .tres{
+            
             display: flex;
             flex-direction: column;
-            flex-wrap: wrap-reverse;
+            flex-wrap: wrap;
             justify-content: space-evenly;
             align-items: center;
-             background-image: url("../img/banner3.png");
-              background-position: center;
+            background-image: url("../img/banner3.png");
+            background-position: center;
              background-size: cover;
+            
         h1{
             font-size: 80px;
             font-weight: 800;
             color: $naranja;
+            line-height: .9;
+
+
+            //<-- atento a esta linea truco degradado texto//
+            display: inline-block;
+            color: #000;
+            background: #fff;
+            mix-blend-mode: multiply;
+            position: relative;
            }
+//<-- atento a esta linea truco degradado texto//
+           h1:before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right, red, rgb(255, 166, 0));
+            mix-blend-mode: screen; //<-- atento a esta linea truco degradado texto//
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+
            h2{
-            font-weight: 600;
-            line-height: .3;
-    
+           
+            font-weight: 800;
+            line-height: .9;
+
            }
+          .img_tres{
+            max-width: 600px;
+           img{
+            max-width: 100%;
+           }
+           
+        }
 
     }
   
