--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -16,6 +16,8 @@
 @import './components/empresas';
 @import './components/contacto';
 @import './components/modal';
+@import './components/home';
+@import './components/login';
 
 
 
