--- a/src/Styles/components/_hogar.scss
+++ b/src/Styles/components/_hogar.scss
@@ -180,7 +180,7 @@
         margin-top: 0;
      
         .banners{
-            height: 100vh;
+            height: 80vh;
 
         }
         
@@ -313,10 +313,10 @@
         height: 70px;
         border-right:none;
         border-bottom: 1px solid $blanco;
+        border-left:none;
         display: flex;
         align-items: center;
         justify-content: center;
-        
         flex-direction: column;
         color: $blanco;
         
