--- a/src/Styles/components/_pagar.scss
+++ b/src/Styles/components/_pagar.scss
@@ -33,6 +33,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
+            padding: 30px;
             .logo_marcas{
               
                 img{
