--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -19,6 +19,7 @@
 @import './components/home';
 @import './components/login';
 @import './components/pagar';
+@import './components/nuestrosClientes';
 
 
 
