--- a/src/Styles/components/_cardplanes.scss
+++ b/src/Styles/components/_cardplanes.scss
@@ -27,11 +27,11 @@
         color: $negro;
         padding: 8px 0px 0px 0px;
         h6{
-            font-weight: 600;
+            font-weight: 800;
         }
         .tipo{
             color: $naranja;
-            font-weight: 600;
+            font-weight: 800;
 
         }
     }
@@ -58,11 +58,32 @@
     }
 
     .plan_descripcion{
-        padding: 30px  0 15px 0;
+        display: flex;
+       
+        flex-direction: column;
+        padding: 15px  0 15px 0;
         text-align: center;
         p{
             line-height: .8;
         }
+        .tvdigital{
+            width: 90%;
+            margin: auto;
+         
+            border-radius: 7px;
+            border: 1px solid $naranja;
+            margin-bottom: 15px;
+            
+            img{
+                margin: 5px;
+                width: 95%;           }
+            h6{
+             
+                padding: 7px 20px;
+                font-weight: 800;
+            }
+        }   
+
 
     }
 
