--- a/src/Styles/components/_nuestrosClientes.scss
+++ b/src/Styles/components/_nuestrosClientes.scss
@@ -7,8 +7,10 @@ h2{
     padding: 80px 0;} 
     
     .logoclientes{
+        
         padding-bottom: 80px;
         img{
+            width: 350px;
             padding: 20px 50px;
         }
     }
