--- a/src/Styles/components/_pagar.scss
+++ b/src/Styles/components/_pagar.scss
@@ -56,8 +56,9 @@
     
     p{
         text-align: start;
-        border-left: 1px solid $negro;
+        border-left: 2px solid $negro;
         padding-left: 20px;
+        font-weight: 600;
     }
 
     .puntos{
