--- a/src/Styles/components/_pagar.scss
+++ b/src/Styles/components/_pagar.scss
@@ -11,6 +11,10 @@
         display: flex;
         gap: 30px;
         padding: 30px;
+        text-decoration: none;
+        a{
+            text-decoration: none;
+        }
     button{
         width: 120px;
         height: 40px;
@@ -19,6 +23,8 @@
         border-radius: 7px;
 
     }
+
+   
 }
 
     .puntos_autorizados{
@@ -71,3 +77,10 @@
    
 }
 
+.logo_pagar{
+img{
+    width: 200px;
+    margin-right: 50px;
+}
+
+}
