--- a/src/Styles/components/_pagar.scss
+++ b/src/Styles/components/_pagar.scss
@@ -10,6 +10,7 @@
     .botones_link{
         display: flex;
         gap: 30px;
+        flex-wrap: wrap;
         padding: 30px;
         text-decoration: none;
         a{
@@ -78,9 +79,11 @@
 }
 
 .logo_pagar{
+    align-items: center;
+    display: flex;
 img{
     width: 200px;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 }
